[gd_scene load_steps=4 format=3 uid="uid://vqhimxj4t7y1"]

[ext_resource type="Script" path="res://Scripts/Item/Inv_UI_Slot.gd" id="1_4bbbg"]
[ext_resource type="Texture2D" uid="uid://cxcvtv4ca6qx6" path="res://Assets/Mine/UI/Frame 2.png" id="2_p5bc4"]

[sub_resource type="LabelSettings" id="LabelSettings_ekhwh"]
font_size = 29
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Panel"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4bbbg")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_p5bc4")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
show_behind_parent = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 12.0
offset_right = 55.0
offset_bottom = 52.0
scale = Vector2(0.5, 0.5)
text = "999"
label_settings = SubResource("LabelSettings_ekhwh")
horizontal_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
